Both files updated